     has already taken certain other advancements.
   * The WML preprocessor now writes warnings to stderr for macros redefined
     without #undef, to help detect unintentional name clashes.
   * Fix macro definition line numbers being offset by 1 in WML preprocessor
     messages involving macros.
   * Added WML menu item and event handler views to the Gamestate Inspector
     dialog.
   * Added new possibilities for [effect]:
     * apply_to=alignment - change a unit's alignment
     * apply_to=attacks_left - change a unit's attacks per turn
     * apply_to=recall_cost - change a unit's recall cost
     * apply_to=vision, apply_to=jamming - change a unit's vision/jamming points
     * apply_to=new_advancement - add new advancement possibilities (either units
       or AMLAs)
     * apply_to=remove_advancement - remove advancement possibilities (either units
       or AMLAs)
     * apply_to=attack - add set_ versions of all existing increase_ keys
     * apply_to=attack - add increase_movement_used and set_movement_used to change the
       number of movement points the attack consumes
   * Ability to patch movetypes to account for custom terrains or damage types
   * Removed y offset by -1 from [message]'s scroll-to-unit logic.
   * Add [found_item] ConditionalWML to check if an [object]id= ActionWML has been taken
   * New auto-stored WML variable $other_unit usable in the following contexts:
     * [filter_adjacent] - $other_unit refers to the $this_unit of the enclosing filter
       (In weapon specials and unit abilities, the unit owning the ability.)
     * [filter_self/opponent/attacker/defender] (weapon specials)
       $other_unit refers to the other unit in the attack
       (eg in [filter_self], it's the opponent)
     * [affect_adjacent][filter] (unit abilities)
       $other_unit refers to the unit owning the ability
   * New rotate operators for directions: dir:cw and dir:ccw
     (This is useful mostly in conjunction with variable substitution.)