@@ -112,6 +112,8 @@ Version 1.13.1+dev:
      messages involving macros.
    * Added WML menu item and event handler views to the Gamestate Inspector
      dialog.
+   * The Gamestate Inspector now displays empty WML variables too (including
+     containers/arrays).
    * Added new possibilities for [effect]:
      * apply_to=alignment - change a unit's alignment
      * apply_to=attacks_left - change a unit's attacks per turn
